--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TVTSHOWS</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+     <link rel="shortcut icon" href="https://i.imgur.com/5zQ2xbn.png" type="image/x-icon">
 </head>
 
 <body>
     <nav>
         <div>
-            <h1>TV SHOWS</h1>
+            <h1>TVTREND SHOWS</h1>
         </div>
         <div id="inpDetails">
             <input type="text" placeholder="Search" onkeyup="search()" id="searchItem">
